--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "pg": "^8.13.1",
     "pg-promise": "^11.10.2",
     "qrcode.react": "^4.2.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-qr-reader": "^2.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwind-variants": "^0.3.0",
     "tailwindcss-animate": "^1.0.7",
