--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "date-fns": "^3.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.477.0",
-    "next": "15.1.7",
+    "next": "^15.2.2",
     "next-themes": "^0.4.4",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
