--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "date-fns": "^3.6.0",
+    "date-fns": "^4.1.0",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.477.0",
-    "next": "^15.2.2",
+    "lucide-react": "^0.484.0",
+    "next": "^15.2.4",
     "next-themes": "^0.4.4",
     "qrcode.react": "^4.2.0",
-    "react": "^18.3.1",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-day-picker": "^9.6.3",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.0.1",
@@ -42,14 +42,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
+    "@types/node": "^22.13.14",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.7",
+    "eslint-config-next": "^15.2.4",
     "husky": "^9.1.7",
     "postcss": "^8",
-    "prettier": "3.5.0",
+    "prettier": "^3.5.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
