--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
+    "emoji-picker-react": "^4.12.2",
     "framer-motion": "^12.6.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.484.0",
