--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next-themes": "^0.4.4",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
+    "react-audio-visualize": "^1.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
