--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "framer-motion": "^12.6.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.484.0",
+    "mediasoup-client": "^3.10.1",
     "next": "^15.2.4",
     "next-themes": "^0.4.4",
     "qrcode.react": "^4.2.0",
