update ESLint and Prettier configurations, remove unused core.json and temp.txt files, refactor call socket initialization, and enhance WebRTC error handling

--- a/.prettierrc
+++ b/.prettierrc
@@ -19,5 +19,8 @@
   "requirePragma": false,
   "tabWidth": 2,
   "useTabs": false,
-  "embeddedLanguageFormatting": "auto"
+  "embeddedLanguageFormatting": "auto",
+  "rules": {
+    "@typescript-eslint/no-unused-vars": "off"
+  }
 }
